# base-x

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  README.md  base_x.hh  uint256_t.hh  uint_t.hh  uinteger_t.hh
examples/: demo.cc
test/: test.cc
tests/: Makefile
tests/testcases/: tests.cc
